--- a/src/main/resources/static/addgame.html
+++ b/src/main/resources/static/addgame.html
@@ -81,7 +81,7 @@
   </div>
 </div>
 
-<script src="javascript/utils.js"></script>
+<script src="javascript/addgame.js"></script>
 
 </body>
 </html>
