--- a/src/main/resources/static/game.html
+++ b/src/main/resources/static/game.html
@@ -18,7 +18,7 @@
 <section id="displayGames" class="styleGameContainers"></section>
 
 
-<script src="javascript/utils.js"></script>
+<script src="javascript/game.js"></script>
 
 
 <script>
