--- a/src/main/resources/static/game.html
+++ b/src/main/resources/static/game.html
@@ -18,12 +18,10 @@
 <section id="displayGames" class="styleGameContainers"></section>
 
 
-<script src="javascript/game.js"></script>
+<script src="/javascript/game.js"></script>
 
 
-<script>
-    getAllGames();
-</script>
+
 
 </body>
 
