--- a/src/main/resources/static/addgame.html
+++ b/src/main/resources/static/addgame.html
@@ -64,7 +64,7 @@
         </div>
         <div class="form-group form-input">
           <input
-                  type="text"
+                  type="number"
                   id="gameCost"
                   required
           />
@@ -81,7 +81,7 @@
   </div>
 </div>
 
-<script src="javascript/addgame.js"></script>
+<script src="/javascript/addgame.js"></script>
 
 </body>
 </html>
