--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+            crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/authStyle.css" />
     <title>Login</title>
-    <link rel="stylesheet" href="css/login.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
-<body class="container">
-    <div class="container-md">
-        <h1>LOGIN</h1>
-        <form id="login-form">
-            <div class="form-group">
-                <label for="login-username">Username</label>
-                <input type="text" id="login-username" class="form-control" placeholder="Enter username">
+
+<body>
+<div class="wrapper">
+    <div class="inner">
+        <div class="image-holder">
+            <img src="" alt="" />
+        </div>
+        <form>
+            <h3>Login</h3>
+            <div class="form-holder">
+                <input
+                        type="email"
+                        placeholder="E-mail"
+                        id="login-username"
+                        class="form-control"
+                />
             </div>
-            <div class="form-group">
-                <label for="login-password">Password</label>
-                <input type="password" id="login-password" class="form-control" placeholder="Enter password">
+            <div class="form-holder">
+                <input type="password"
+                       placeholder="Password"
+                       id="login-password"
+                       class="form-control"
+                />
             </div>
-            <div class="mt-1">
-                <button id="submit-button" type="submit" class="btn btn-primary">Login</button>
-                <a href="register.html" class="btn btn-primary">Create Account</a>
+            <div class="form-login">
+                <button type="submit" id="authSubmit" value="login">LOGIN</button>
+                <p>
+                    Don't Have An Account? <a href="./register.html">Sign Up</a>
+                </p>
             </div>
         </form>
     </div>
+</div>
 
-    <script src="javascript/login.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script src="javascript/login.js"></script>
+
+
 </body>
 </html>
