--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -20,12 +20,12 @@
         <div class="image-holder">
             <img src="" alt="" />
         </div>
-        <form>
+        <form id="login-form">
             <h3>Login</h3>
             <div class="form-holder">
                 <input
-                        type="email"
-                        placeholder="E-mail"
+                        type="text"
+                        placeholder="Username"
                         id="login-username"
                         class="form-control"
                 />
