--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -14,7 +14,7 @@
     <title>Dashboard</title>
 </head>
 <body>
-<nav class = navStyle>
+<nav class = navStyleDashboard>
     <a href="game.html"><button type="button" id="gameBtnDashboard" >Games</button></a>
     <a type="button" id="logout" href="./login.html" onclick="handleLogout()">Logout</a>
 
@@ -22,7 +22,7 @@
 
 <h1 class = "dashboard-text">Dashboard</h1>
 
-<section id="displayDashboard" class="styleDashboardContainers"></section>
+<section id="displayDashboard" class="styleGameContainers"></section>
 
 <script src="/javascript/dashboard.js"></script>
 
