--- a/src/main/resources/static/game.html
+++ b/src/main/resources/static/game.html
@@ -14,6 +14,7 @@
 <body>
 <nav class = navStyle>
     <a href="addgame.html"> <button type="button" id="addNewGame" > Add Game</button></a>
+    <a href="dashboard.html"> <button type="button" id="dashboardBtn" > Dashboard </button></a>
 </nav>
 <section id="displayGames" class="styleGameContainers"></section>
 
