--- a/src/main/resources/static/addgame.html
+++ b/src/main/resources/static/addgame.html
@@ -11,6 +11,9 @@
       @import url('https://fonts.googleapis.com/css2?family=Boogaloo&display=swap');
     </style>
   <link rel="stylesheet" href="css/addgame.css" />
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11%22%3E"> </script>
+
   <title>Add Game</title>
 </head>
 <body>
