--- a/src/main/resources/static/favorite.html
+++ b/src/main/resources/static/favorite.html
@@ -20,7 +20,7 @@
 
 </nav>
 
-<h1 class = "dashboard-text">Dashboard</h1>
+<h1 class = "dashboard-text">Favorite</h1>
 
 <section id="displayFavorite" class="styleGameContainers"></section>
 
