--- a/src/main/resources/static/favorite.html
+++ b/src/main/resources/static/favorite.html
@@ -10,20 +10,48 @@
         @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Boogaloo&display=swap');
       </style>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css'>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css'>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.1/css/mdb.min.css'>
   <link rel="stylesheet" href="css/style.css">
-  <title>Dashboard</title>
+  <title>Favorite</title>
 </head>
 <body>
-<nav class = navStyleDashboard>
-  <a href="game.html"><button type="button" id="gameBtnDashboard" >Games</button></a>
-  <a type="button" id="logout" href="./login.html" onclick="handleLogout()">Logout</a>
-
+<!--Navbar -->
+<nav class="mb-4 navbar navbar-expand-lg navbar-dark black">
+  <a class="navbar-brand font-bold" href="game.html">Game</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="addgame.html"><i class="fa fa-gamepad"></i> Add Game <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="dashboard.html"><i class="fa fa-home"></i> Dashboard </a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> Profile </a>
+        <div class="dropdown-menu dropdown-menu-right dropdown-cyan" aria-labelledby="navbarDropdownMenuLink-4">
+          <a class="dropdown-item" href="favorite.html">Favorites</a>
+          <a class="dropdown-item" href="login.html">Logout</a>
+        </div>
+      </li>
+    </ul>
+  </div>
 </nav>
+
+<!--MDB Navbars-->
 
 <h1 class = "dashboard-text">Favorite</h1>
 
 <section id="displayFavorite" class="styleGameContainers"></section>
 
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js'></script>
+<script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.1/js/mdb.min.js'></script>
 <script src="/javascript/favorite.js"></script>
 
 
